--- a/views/tour.html
+++ b/views/tour.html
@@ -48,133 +48,131 @@
                 <img class="banner__bannerImg" src="../images/banners/banner01.jpg" alt="Imagen de portada">
             </section>
 
-            <section class="sectionBgWhite">
-                <div class="centerDiv">
-                    <h2 class="tituloSeccion">Tour dates</h2>
-                    <table class="tourTable">
-                        <tr>
-                            <td class="numeroTourDate">16</td>
-                            <td class="fechaTourDate">
-                                Fri
-                                <br>
-                                Apr
-                            </td>
-                            <td class="nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">17</td>
-                            <td class="fechaTourDate">
-                                Sat
-                                <br>
-                                Apr
-                            </td>
-                            <td class="nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">18</td>
-                            <td class="fechaTourDate">
-                                Fri
-                                <br>
-                                Jun
-                            </td>
-                            <td class="nombreEventoTourDate">Praia da Rocha - Portimão, Portugal</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">07</td>
-                            <td class="fechaTourDate">
-                                Wed
-                                <br>
-                                Jul
-                            </td>
-                            <td class="nombreEventoTourDate">Airbeat One Festival 2020 - Neustadt-glewe, Germany</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">31</td>
-                            <td class="fechaTourDate">
-                                Sat
-                                <br>
-                                Jul
-                            </td>
-                            <td class="nombreEventoTourDate">The Brooklyn Mirage - Brooklyn, NY</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">03</td>
-                            <td class="fechaTourDate">
-                                Fri
-                                <br>
-                                Sep
-                            </td>
-                            <td class="nombreEventoTourDate">SeatGeek Stadium - Bridgeview, IL</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="numeroTourDate">10</td>
-                            <td class="fechaTourDate">
-                                Fri
-                                <br>
-                                Dec
-                            </td>
-                            <td class="nombreEventoTourDate">Ogden Theatre - Denver, CO</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
-                                    <img src="../images/icons/ico_buy.png" alt="">Buy tickets
-                                </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
-                                    <img src="../images/icons/ticket.png" alt="ticket">
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                    <br>
-                    <br>
-                </div>
+            <section class="sectionTour">
+                <h2 class="tituloSeccion">Tour dates</h2>
+                <table class="tourTable">
+                    <tr>
+                        <td class="tourTable__numeroTourDate">16</td>
+                        <td class="tourTable__fechaTourDate">
+                            Fri
+                            <br>
+                            Apr
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">17</td>
+                        <td class="tourTable__fechaTourDate">
+                            Sat
+                            <br>
+                            Apr
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">18</td>
+                        <td class="tourTable__fechaTourDate">
+                            Fri
+                            <br>
+                            Jun
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">Praia da Rocha - Portimão, Portugal</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/electric-daisy-carnival-edc-europe/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">07</td>
+                        <td class="tourTable__fechaTourDate">
+                            Wed
+                            <br>
+                            Jul
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">Airbeat One Festival 2020 - Neustadt-glewe, Germany</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.festicket.com/festivals/airbeat-one-festival/2021/shop/?referrer=bandsintown&shared_from=partner_linkgen">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">31</td>
+                        <td class="tourTable__fechaTourDate">
+                            Sat
+                            <br>
+                            Jul
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">The Brooklyn Mirage - Brooklyn, NY</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/nora-en-pure-purified-tickets-94697664263?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1020702675">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">03</td>
+                        <td class="tourTable__fechaTourDate">
+                            Fri
+                            <br>
+                            Sep
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">SeatGeek Stadium - Bridgeview, IL</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/North-Coast-Music-Festival-2021/421067?afflky=NorthCoastMusicFestival">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="tourTable__numeroTourDate">10</td>
+                        <td class="tourTable__fechaTourDate">
+                            Fri
+                            <br>
+                            Dec
+                        </td>
+                        <td class="tourTable__nombreEventoTourDate">Ogden Theatre - Denver, CO</td>
+                        <td class="tourTable__buyTicket">
+                            <a class="tourTable__buyDesktop" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
+                                <img src="../images/icons/ico_buy.png" alt="">Buy tickets
+                            </a>
+                            <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.axs.com/events/390122/nora-en-pure-tickets?cid=usaffbandsintown&aff=usaffbandsintown">
+                                <img src="../images/icons/ticket.png" alt="ticket">
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+                <br>
+                <br>
             </section>
 
             <footer class="footer">
